--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -892,6 +892,97 @@ video {
     width: 8%;
 }
 
+/* 기업 회원 로직 */
+
+.CorporationTable_container {
+    width: 100%;
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
+    overflow: hidden;
+    display: table; /* 테이블처럼 보이도록 설정 */
+    table-layout: fixed; /* 모든 열이 지정된 비율에 맞게 크기를 고정 */
+    text-align: center;
+}
+
+.CorporationTable_row {
+    display: table-row;
+    width: 100%;
+    border: 1px solid #dee2e6;
+}
+
+.CorporationTable_cell {
+    display: table-cell;
+    box-sizing: border-box; /* padding과 border를 포함한 크기 조정 */
+    padding: 8px; /* 셀 내용과 셀 경계 사이의 간격 */
+    vertical-align: middle; /* 내용이 수직으로 가운데 정렬되도록 */
+    border-bottom: 1px solid #dee2e6; /* 셀 아래 테두리 */
+}
+.CorporationTable_header {
+    background-color: #f8f9fa;
+    border-bottom: 1px solid #dee2e6;
+    border-radius: 8px 8px 0 0 !important; /*헤더 아래 테두리*/
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.CorporationTable_cell input[type="checkbox"] {
+    margin: 0 auto;
+}
+
+/* 기존의 너비 설정 유지 */
+/* 체크박스 열 */
+.Corporation-headerCell:nth-child(1),
+.CorporationTable_cell:nth-child(1) {
+    width: 3%;
+}
+
+/* 첫번째 열 */
+.Corporation-headerCell:nth-child(2),
+.CorporationTable_cell:nth-child(2) {
+    width: 12%;
+}
+
+/* 두번째 열 */
+.Corporation-headerCell:nth-child(3),
+.CorporationTable_cell:nth-child(3) {
+    width: 13%;
+}
+
+/* 세번째 열 */
+.Corporation-headerCell:nth-child(4),
+.CorporationTable_cell:nth-child(4) {
+    width: 17%;
+}
+
+/* 네번째 열 */
+.Corporation-headerCell:nth-child(5),
+.CorporationTable_cell:nth-child(5) {
+    width: 17%;
+}
+
+/* 다섯번째 열 */
+.Corporation-headerCell:nth-child(6),
+.CorporationTable_cell:nth-child(6) {
+    width: 11%;
+}
+
+/* 여섯번째 열 */
+.Corporation-headerCell:nth-child(7),
+.CorporationTable_cell:nth-child(7) {
+    width: 11%;
+}
+
+/* 일곱 열 */
+.Corporation-headerCell:nth-child(8),
+.CorporationTable_cell:nth-child(8) {
+    width: 6%;
+}
+/* 마지막 열 */
+.Corporation-headerCell:nth-child(9),
+.CorporationTable_cell:nth-child(9) {
+    width: 8%;
+}
+
 /* 수정 버튼 */
 .editBtn {
     background-color: #007bff;
