--- a/src/main/resources/templates/main/login-header.html
+++ b/src/main/resources/templates/main/login-header.html
@@ -397,7 +397,7 @@
                             <ul class="links">
                                 <li>
                                     <a
-                                        href="/zf_user/member/persons/main"
+                                        href="/mypage"
                                         data-nav-track="ga_lead|main-gnb|layer_person|mylayer_myhome"
                                         >MY홈</a
                                     >
